d   Out-dent Doxygen Member Groups, to stand out from their content (#153)
This makes the groups of functions easier to interpret on Read the Docs

--- a/doc/sphinx/_static/breathe.css
+++ b/doc/sphinx/_static/breathe.css
@@ -10,3 +10,8 @@
     display: inline;
 }
 
+/* So Doxygen Member Groups are out-dented, to stand out from their content */
+.breathe-sectiondef-title.rubric {
+    width: inherit;
+    margin-left: -20px;
+}
